--- a/18CSE301J/index.html
+++ b/18CSE301J/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>18CSE301J</title>
+<title>My Tableau Presentation</title>
+<style>
+#data{
+width:100vw;
+height:100vh;
+}
+</style>
 </head>
+<h1>
+18CSE301J INFORMATION VISUALIZATION
+</h1>
+<h2>
+ARYAN VATS
+</h2>
+
 <body>
-  <h1>RA2011030010156
-  <a href="https://public.tableau.com/views/US_Census_2010/Dashboard1?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link">Link</a></h1>
+<!-- Embed Tableau Public presentation with embedded dashboard link -->
+<iframe id="data" src="https://public.tableau.com/app/profile/sai.vaibhav/viz/US_Census_2010/Dashboard1" width=100vw height=100vh></iframe>
 </body>
 </html>
