--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ height:100vh;
 18CSE301J INFORMATION VISUALIZATION
 </h1>
 <h2>
-ARYAN VATS
+Sai Vaibhav
 </h2>
 
 <body>
 <!-- Embed Tableau Public presentation with embedded dashboard link -->
-<iframe id="data" src="https://public.tableau.com/app/profile/sai.vaibhav/viz/US_Census_2010/Dashboard1" width=100vw height=100vh></iframe>
+<iframe id="data" src="https://public.tableau.com/views/US_Census_2010/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link:showVizHome=no&:embed=true" width=100vw height=100vh></iframe>
 </body>
 </html>
