--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ height:100vh;
 }
 </style>
 </head>
+  <center>
 <h1>
 18CSE301J INFORMATION VISUALIZATION
 </h1>
@@ -19,5 +20,6 @@ Sai Vaibhav
 <body>
 <!-- Embed Tableau Public presentation with embedded dashboard link -->
 <iframe id="data" src="https://public.tableau.com/views/US_Census_2010/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link:showVizHome=no&:embed=true" width=100vw height=100vh></iframe>
-</body>
+  </center>
+    </body>
 </html>
